src/test/deca/context/valid/avecObjet/protected_field_access_from_subclass.deca
// Description :
// Sous-classe accède à champ protected de la super-classe
//
// Resultats :
// ok

class T { protected int x = 1; }
class U extends T { void incr() { x = x + 1; } }
