src/test/deca/context/invalid/inheritance/protected_field_bypass_attempt.deca
// Description :
// accès illégal à un champ protected depuis une autre classe
//
// Resultats :
// Erreur contextuelle
// Ligne 12 : violation de visibilité protected

class Parent {
    protected int x;
}

class I {
    void test() {
        Parent p = new Parent();
        int y = p.x; // doit échouer
    }
}
